# ParallelComputing-Histogram-Equalization

./: .gitignore  LICENSE  README.md  READMI.txt
CUDA/: .project  main.cu
CUDA/Debug/: CUDA  makefile  objects.mk  subdir.mk
OpenMP/: CMakeLists.txt  main.cpp
Plot/: plot_eq.m
Plot/csv_data/: CUDA_exec_time.csv  OMP_exec_time_2th.csv  OMP_exec_time_4th.csv  OMP_exec_time_8th.csv  OMP_exec_time_default.csv  sequential_exec_time.csv
Sequential/: CMakeLists.txt  main.cpp  prova
histogram_equalization_CUDA/: .cproject  .project  main.cu
histogram_equalization_CUDA/Debug/: histogram_equalization_CUDA  makefile  subdir.mk
